--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>redux-todo</title>
 </head>
 <body>
-    
+    <div class="todoapp" id="root"></div>
+    <script src="/static/bundle.js"></script>
 </body>
 </html>
